--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <p style="text-align: center">
         <span class="underline">To register,</span> email to:
-        <a href="">register@domain.com</a>
+        <a href="#">register@domain.com</a>
         OR click the following link
         <span class="underline">www.techclass.com</span>
       </p>
